# eth-lisbon-2025-client

./: README.md
my_project/: pyproject.toml
my_project/src/my_project/: clientcall.py  superforcaster_request.py
